package eapli.base.nivelCriticidade.repository;

import eapli.base.nivelCriticidade.domain.Etiqueta;
import eapli.base.nivelCriticidade.domain.Nivel;
import eapli.framework.domain.repositories.DomainRepository;

/**
 * The interface Nivel repository.
 */
public interface NivelRepository
        extends DomainRepository<Etiqueta, Nivel> {

}
